force-app/main/default/objects/SalesforceContact__x/SalesforceContact__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceContact</externalName>
    <label>Contatto Salesforce</label>
    <pluralLabel>Contatti Salesforce</pluralLabel>
</CustomObject>