force-app/main/default/objects/SalesforceContact__x/fields/AccountId_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>AccountId_CONTACT__c</fullName>
    <description>AccountId_CONTACT</description>
    <externalDeveloperName>AccountId_CONTACT</externalDeveloperName>
    <label>AccountId_CONTACT</label>
    <length>255</length>
    <referenceTo>SalesforceCustomer__x</referenceTo>
    <relationshipLabel>Contatti Salesforce</relationshipLabel>
    <relationshipName>ContattiSalesforce</relationshipName>
    <type>ExternalLookup</type>
</CustomField>