force-app/main/default/objects/SalesforceContact__x/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <description>Birthdate</description>
    <externalDeveloperName>Birthdate</externalDeveloperName>
    <label>Birthdate</label>
    <type>DateTime</type>
</CustomField>