force-app/main/default/objects/SalesforceContact__x/fields/BusinessNameWebC__c.field-meta.xml
<CustomField>
    <fullName>BusinessNameWebC__c</fullName>
    <description>BusinessNameWebC</description>
    <externalDeveloperName>BusinessNameWebC</externalDeveloperName>
    <label>Ragione Sociale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>