force-app/main/default/objects/SalesforceContact__x/fields/DegreeOfStudiesC__c.field-meta.xml
<CustomField>
    <fullName>DegreeOfStudiesC__c</fullName>
    <description>DegreeOfStudiesC</description>
    <externalDeveloperName>DegreeOfStudiesC</externalDeveloperName>
    <label>Titolo di studio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>