force-app/main/default/objects/SalesforceContact__x/fields/GlobalMigrationKeyC__c.field-meta.xml
<CustomField>
    <fullName>GlobalMigrationKeyC__c</fullName>
    <description>GlobalMigrationKeyC</description>
    <externalDeveloperName>GlobalMigrationKeyC</externalDeveloperName>
    <label>Chiave globale di migrazione</label>
    <length>50</length>
    <type>Text</type>
</CustomField>