force-app/main/default/objects/SalesforceContact__x/fields/GlobalMigrationKeyC_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>GlobalMigrationKeyC_CONTACT__c</fullName>
    <description>GlobalMigrationKeyC_CONTACT</description>
    <externalDeveloperName>GlobalMigrationKeyC_CONTACT</externalDeveloperName>
    <label>GlobalMigrationKeyC_CONTACT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>