force-app/main/default/objects/SalesforceContact__x/fields/Id_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>Id_CONTACT__c</fullName>
    <description>Id_CONTACT</description>
    <externalDeveloperName>Id_CONTACT</externalDeveloperName>
    <label>Id_CONTACT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>