force-app/main/default/objects/SalesforceContact__x/fields/Ind_CreatedBy_Name__c.field-meta.xml
<CustomField>
    <fullName>Ind_CreatedBy_Name__c</fullName>
    <description>Ind_CreatedBy_Name</description>
    <externalDeveloperName>Ind_CreatedBy_Name</externalDeveloperName>
    <label>Ind_CreatedBy_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>