force-app/main/default/objects/SalesforceContact__x/fields/Ind_HasOptedOutSoftSpamC__c.field-meta.xml
<CustomField>
    <fullName>Ind_HasOptedOutSoftSpamC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ind_HasOptedOutSoftSpamC</description>
    <externalDeveloperName>Ind_HasOptedOutSoftSpamC</externalDeveloperName>
    <label>Ind_HasOptedOutSoftSpamC</label>
    <type>Checkbox</type>
</CustomField>