force-app/main/default/objects/SalesforceContact__x/fields/Ind_Id__c.field-meta.xml
<CustomField>
    <fullName>Ind_Id__c</fullName>
    <description>Ind_Id</description>
    <externalDeveloperName>Ind_Id</externalDeveloperName>
    <label>Ind_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>