force-app/main/default/objects/SalesforceContact__x/fields/Ind_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>Ind_LastModifiedDate__c</fullName>
    <description>Ind_LastModifiedDate</description>
    <externalDeveloperName>Ind_LastModifiedDate</externalDeveloperName>
    <label>Ind_LastModifiedDate</label>
    <type>DateTime</type>
</CustomField>