force-app/main/default/objects/SalesforceContact__x/fields/Ind_LastName__c.field-meta.xml
<CustomField>
    <fullName>Ind_LastName__c</fullName>
    <description>Ind_LastName</description>
    <externalDeveloperName>Ind_LastName</externalDeveloperName>
    <label>Ind_LastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>