force-app/main/default/objects/SalesforceContact__x/fields/Ind_MarketingCompanyConsentC__c.field-meta.xml
<CustomField>
    <fullName>Ind_MarketingCompanyConsentC__c</fullName>
    <description>Ind_MarketingCompanyConsentC</description>
    <externalDeveloperName>Ind_MarketingCompanyConsentC</externalDeveloperName>
    <label>Company consenso marketing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>