force-app/main/default/objects/SalesforceContact__x/fields/Ind_MarketingPrivacyC__c.field-meta.xml
<CustomField>
    <fullName>Ind_MarketingPrivacyC__c</fullName>
    <description>Ind_MarketingPrivacyC</description>
    <externalDeveloperName>Ind_MarketingPrivacyC</externalDeveloperName>
    <label>Ind_MarketingPrivacyC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>