force-app/main/default/objects/SalesforceContact__x/fields/Ind_OneshotBlacklistC__c.field-meta.xml
<CustomField>
    <fullName>Ind_OneshotBlacklistC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ind_OneshotBlacklistC</description>
    <externalDeveloperName>Ind_OneshotBlacklistC</externalDeveloperName>
    <label>Blacklist Oneshot</label>
    <type>Checkbox</type>
</CustomField>