force-app/main/default/objects/SalesforceContact__x/fields/Ind_PrivacyProfilingChoiceDateC__c.field-meta.xml
<CustomField>
    <fullName>Ind_PrivacyProfilingChoiceDateC__c</fullName>
    <description>Ind_PrivacyProfilingChoiceDateC</description>
    <externalDeveloperName>Ind_PrivacyProfilingChoiceDateC</externalDeveloperName>
    <label>Data Consenso Profilazione</label>
    <type>DateTime</type>
</CustomField>