force-app/main/default/objects/SalesforceContact__x/fields/Ind_PrivacyProfilingConsentInitiativeC__c.field-meta.xml
<CustomField>
    <fullName>Ind_PrivacyProfilingConsentInitiativeC__c</fullName>
    <description>Ind_PrivacyProfilingConsentInitiativeC</description>
    <externalDeveloperName>Ind_PrivacyProfilingConsentInitiativeC</externalDeveloperName>
    <label>Ind_PrivacyProfilingConsentInitiativeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>