force-app/main/default/objects/SalesforceContact__x/fields/Ind_PrivacySoftSpamChoiceDateC__c.field-meta.xml
<CustomField>
    <fullName>Ind_PrivacySoftSpamChoiceDateC__c</fullName>
    <description>Ind_PrivacySoftSpamChoiceDateC</description>
    <externalDeveloperName>Ind_PrivacySoftSpamChoiceDateC</externalDeveloperName>
    <label>Data diniego SoftSpam</label>
    <type>DateTime</type>
</CustomField>