force-app/main/default/objects/SalesforceContact__x/fields/Ind_PrivacyThirdPartyConsentInitiativeC__c.field-meta.xml
<CustomField>
    <fullName>Ind_PrivacyThirdPartyConsentInitiativeC__c</fullName>
    <description>Ind_PrivacyThirdPartyConsentInitiativeC</description>
    <externalDeveloperName>Ind_PrivacyThirdPartyConsentInitiativeC</externalDeveloperName>
    <label>Iniziativa consenso dati a terzi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>