force-app/main/default/objects/SalesforceContact__x/fields/Ind_ProfilingPrivacyC__c.field-meta.xml
<CustomField>
    <fullName>Ind_ProfilingPrivacyC__c</fullName>
    <description>Ind_ProfilingPrivacyC</description>
    <externalDeveloperName>Ind_ProfilingPrivacyC</externalDeveloperName>
    <label>Consenso Alla Profilazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>