force-app/main/default/objects/SalesforceContact__x/fields/Ind_ProfilingPrivacyVersionC__c.field-meta.xml
<CustomField>
    <fullName>Ind_ProfilingPrivacyVersionC__c</fullName>
    <description>Ind_ProfilingPrivacyVersionC</description>
    <externalDeveloperName>Ind_ProfilingPrivacyVersionC</externalDeveloperName>
    <label>Versione informativa profilazione</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>