force-app/main/default/objects/SalesforceContact__x/fields/Ind_ThirdPartyPrivacyC__c.field-meta.xml
<CustomField>
    <fullName>Ind_ThirdPartyPrivacyC__c</fullName>
    <description>Ind_ThirdPartyPrivacyC</description>
    <externalDeveloperName>Ind_ThirdPartyPrivacyC</externalDeveloperName>
    <label>Ind_ThirdPartyPrivacyC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>