force-app/main/default/objects/SalesforceContact__x/fields/InterestProductC__c.field-meta.xml
<CustomField>
    <fullName>InterestProductC__c</fullName>
    <description>InterestProductC</description>
    <externalDeveloperName>InterestProductC</externalDeveloperName>
    <label>Prodotto di interesse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>