force-app/main/default/objects/SalesforceContact__x/fields/LineageID_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>LineageID_CONTACT__c</fullName>
    <description>LineageID_CONTACT</description>
    <externalDeveloperName>LineageID_CONTACT</externalDeveloperName>
    <label>LineageID_CONTACT</label>
    <length>200</length>
    <type>Text</type>
</CustomField>