force-app/main/default/objects/SalesforceContact__x/fields/MailingCountry__c.field-meta.xml
<CustomField>
    <fullName>MailingCountry__c</fullName>
    <description>MailingCountry</description>
    <externalDeveloperName>MailingCountry</externalDeveloperName>
    <label>MailingCountry</label>
    <length>80</length>
    <type>Text</type>
</CustomField>