force-app/main/default/objects/SalesforceContact__x/fields/MailingStreetCodeC__c.field-meta.xml
<CustomField>
    <fullName>MailingStreetCodeC__c</fullName>
    <description>MailingStreetCodeC</description>
    <externalDeveloperName>MailingStreetCodeC</externalDeveloperName>
    <label>Codice Via Strad. SAP [Res./Sede Legale]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>