force-app/main/default/objects/SalesforceContact__x/fields/MODIFIEDDATE_AZURE_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>MODIFIEDDATE_AZURE_CONTACT__c</fullName>
    <description>MODIFIEDDATE_AZURE_CONTACT</description>
    <externalDeveloperName>MODIFIEDDATE_AZURE_CONTACT</externalDeveloperName>
    <label>MODIFIEDDATE_AZURE_CONTACT</label>
    <type>DateTime</type>
</CustomField>