force-app/main/default/objects/SalesforceContact__x/fields/PhonePrefixC__c.field-meta.xml
<CustomField>
    <fullName>PhonePrefixC__c</fullName>
    <description>PhonePrefixC</description>
    <externalDeveloperName>PhonePrefixC</externalDeveloperName>
    <label>PhonePrefixC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>