force-app/main/default/objects/SalesforceContact__x/fields/ProfessionC__c.field-meta.xml
<CustomField>
    <fullName>ProfessionC__c</fullName>
    <description>ProfessionC</description>
    <externalDeveloperName>ProfessionC</externalDeveloperName>
    <label>ProfessionC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>