force-app/main/default/objects/SalesforceContact__x/fields/RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Name__c</fullName>
    <description>RecordType_Name</description>
    <externalDeveloperName>RecordType_Name</externalDeveloperName>
    <label>Recordtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>