force-app/main/default/objects/SalesforceContact__x/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>Salutation</description>
    <externalDeveloperName>Salutation</externalDeveloperName>
    <label>Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>