force-app/main/default/objects/SalesforceContact__x/fields/VATNumberC__c.field-meta.xml
<CustomField>
    <fullName>VATNumberC__c</fullName>
    <description>VATNumberC</description>
    <externalDeveloperName>VATNumberC</externalDeveloperName>
    <label>VATNumberC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>