force-app/main/default/objects/SalesforceContact__x/fields/VipC__c.field-meta.xml
<CustomField>
    <fullName>VipC__c</fullName>
    <description>VipC</description>
    <externalDeveloperName>VipC</externalDeveloperName>
    <label>Contatto VIP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>